--- a/mae_file_reader.ipynb
+++ b/mae_file_reader.ipynb
@@ -19,7 +19,7 @@
    "outputs": [],
    "source": [
     "import glob\n",
-    "protein_path = glob.glob(\"/home/pc/Documents/combind_fragment/combind_fragment/fragment_dataset/*\")\n",
+    "protein_path = glob.glob(\"/home/pc/Documents/combind_fragment/combind_fragment/fragment_dataset_redocking/*\")\n",
     "import os\n",
     "\n",
     "from collections import defaultdict\n",
@@ -49,7 +49,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 44/44 [00:00<00:00, 97.31it/s]\n"
+      "100%|██████████| 44/44 [00:00<00:00, 93.52it/s]\n"
      ]
     }
    ],
@@ -115,9 +115,9 @@
     "\n",
     "\n",
     "# Path to the predicted poses from Glide docking\n",
-    "poses_pred_path = \"/home/pc/Documents/combind_fragment/combind_fragment/fragment_dataset/A5H660/docking/*/*_pv.maegz\"\n",
+    "poses_pred_path = \"/home/pc/Documents/combind_fragment/combind_fragment/fragment_dataset_redocking/A5H660/docking/*/*_pv.maegz\"\n",
     "#\n",
-    "poses_pred_path = \"/home/pc/Documents/combind_fragment/combind_fragment_test/A5H660/docking_re_smiles/*/*_pv.maegz\"\n",
+    "#poses_pred_path = \"/home/pc/Documents/combind_fragment/combind_fragment_test/A5H660/docking_re_smiles/*/*_pv.maegz\"\n",
     "poses_pred_path = glob.glob(poses_pred_path)\n",
     "\n",
     "rmsd_values = {}\n",
