--- a/combind_utils/redocking/create_similes_from_pdb.ipynb
+++ b/combind_utils/redocking/create_similes_from_pdb.ipynb
@@ -2,16 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mValueError: signal only works in main thread. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import glob\n",
-    "dir_prefix = \"/home/pc/Documents/combind_fragment/combind_fragment\"\n",
-    "source_dir = f\"{dir_prefix}/fragment_dataset/*/structures/ligands\"\n",
-    "dest_dir = f\"{dir_prefix}/fragment_dataset_redocking\"\n",
-    "source_dir_list = glob.glob(source_dir)\n",
+    "dir_prefix = \"/scratch/groups/rondror/marvinli/combind_fragment\"#\"/home/pc/Documents/combind_fragment/combind_fragment\"\n",
+    "dataset_name = \"fragment_fullBinders_dataset\"\n",
+    "source_dir = f\"{dir_prefix}/{dataset_name}/*/structures/ligands\"\n",
+    "#dest_dir = f\"{dir_prefix}/{dataset_name}_redocking\"\n",
     "\n",
+    "source_dir_list = glob.glob(source_dir)\n",
+    "#breakpoint()\n",
     "import numpy as np\n",
     "import schrodinger\n",
     "#try to read the mae file\n",
@@ -21,7 +34,7 @@
     "from rdkit import Chem\n",
     "from rdkit import Chem\n",
     "from rdkit.Chem import AllChem\n",
-    "import pandas as pd\n"
+    "import pandas as pd"
    ]
   },
   {
@@ -119,10 +132,10 @@
     "    ligands_path = glob.glob(ligands_path)\n",
     "    \n",
     "    #extract the  * part from the source_dir\n",
-    "    protein_name = source_dir.replace(f\"{dir_prefix}/fragment_dataset/\",\"\")\n",
+    "    protein_name = source_dir.replace(f\"{dir_prefix}/{dataset_name}/\",\"\")\n",
     "    protein_name = protein_name.replace(\"/structures/ligands\",\"\")\n",
-    "    dest_dir = f\"{dir_prefix}/fragment_dataset_redocking/{protein_name}\"\n",
-    "    \n",
+    "    dest_dir = f\"{dir_prefix}/{dataset_name}_redocking/{protein_name}\"\n",
+    "\n",
     "    ligand_smiles = pd.DataFrame(columns=[\"ID\", \"SMILES\"])\n",
     "    for ligand_path in ligands_path:\n",
     "        ligand = next(StructureReader(ligand_path))\n",
@@ -141,6 +154,7 @@
     "        new_row = pd.DataFrame({\"ID\": [ligand_path.split(\"/\")[-1].replace(\".mae\",\"\")], \n",
     "                            \"SMILES\": [flatten_smiles(smiles)]})\n",
     "        ligand_smiles = pd.concat([ligand_smiles, new_row], ignore_index=True)\n",
+    "\n",
     "    ligand_smiles.to_csv(f\"{dest_dir}/ligand_resmiles.csv\", index=False)\n"
    ]
   }
@@ -161,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
