--- a/combind_utils/redocking/create_similes_from_pdb.ipynb
+++ b/combind_utils/redocking/create_similes_from_pdb.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mValueError: signal only works in main thread. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import glob\n",
     "import os\n",
@@ -13,7 +24,7 @@
     "else:\n",
     "    dir_prefix = \"/home/pc/Documents/combind_fragment/combind_fragment\"\n",
     "\n",
-    "dataset_name = \"fragment_dataset_add_bond_orders\"\n",
+    "dataset_name = \"fragment_fullBinders_dataset_add_bond_orders\"\n",
     "source_dir = f\"{dir_prefix}/{dataset_name}/*/structures/ligands\"\n",
     "#dest_dir = f\"{dir_prefix}/{dataset_name}_redocking\"\n",
     "\n",
@@ -167,7 +178,7 @@
     "                            \"SMILES\": [flatten_smiles(smiles)]})\n",
     "        ligand_smiles = pd.concat([ligand_smiles, new_row], ignore_index=True)\n",
     "\n",
-    "    #ligand_smiles.to_csv(f\"{dest_dir}/ligand_resmiles.csv\", index=False)\n"
+    "    ligand_smiles.to_csv(f\"{dest_dir}/ligand_resmiles.csv\", index=False)\n"
    ]
   }
  ],
@@ -187,7 +198,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
